fablab icon / panopticom txt sizing fixed on mobile

--- a/index.css
+++ b/index.css
@@ -145,7 +145,7 @@ p {
   margin: 10px;
   padding: 0;
   pointer-events: auto;
-  width: 7%;
+  width: max(7%, 20px);
   height: auto;
   /*filter: invert(1);*/
 }
@@ -157,7 +157,7 @@ p {
   margin: 10px !important;
   padding: 0;
   pointer-events: auto;
-  font-size: 3em;
+  font-size: min(3em, 10dvw);
   font-style: italic;
   font-weight: bolder;
   color: white;
